--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -34,7 +34,7 @@ jobs:
         distribution: 'temurin'
     - name: Build with Maven
       run: mvn -B test --file demo/pom.xml
-    - uses: ashley-taylor/junit-report-annotations-action@master
+    - uses: ashley-taylor/junit-report-annotations-action@main
       with:
         access-token: ${{ secrets.GITHUB_TOKEN }}
       if: always()
