--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -21,21 +21,12 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - uses: actions/cache@v1
-      with:
-        path: ~/.m2/repository
-        key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
-        restore-keys: |
-           ${{ runner.os }}-maven-
     - name: Set up JDK 8
       uses: actions/setup-java@v3
       with:
         java-version: '8'
         distribution: 'temurin'
+        cache: 'maven'
     - name: Build with Maven
       run: mvn -B test --file demo/pom.xml
-    - uses: ashley-taylor/junit-report-annotations-action@1.4
-      if: always()
-      with:
-        access-token: ${{ secrets.GITHUB_TOKEN }}
       
