--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -30,4 +30,9 @@ jobs:
         cache: 'maven'
     - name: Build with Maven
       run: mvn -B test --file demo/pom.xml
+    - name: Publish Test Report
+      uses: mikepenz/action-junit-report@v3
+      if: always()
+      with:
+          report_paths: '**/build/test-results/test/TEST-*.xml'
       
