--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -35,4 +35,12 @@ jobs:
       if: always()
       with:
           report_paths: '**/build/test-results/test/TEST-*.xml'
+    - name: Publish test coverage results
+      uses: PavanMudigonda/jacoco-reporter@v4.8
+      with:
+          coverage_results_path: 'target/site/jacoco/jacoco.xml'
+          coverage_report_title: 'Test coverage results'
+          coverage_report_name: 'Test coverage results'
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+
       
