--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -29,7 +29,7 @@ jobs:
         distribution: 'temurin'
         cache: 'maven'
     - name: Build with Maven
-      run: mvn -B test --file demo/pom.xml
+      run: mvn -B install --file demo/pom.xml
     - name: Publish Test Report
       uses: mikepenz/action-junit-report@v3
       if: always()
