--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -8,10 +8,7 @@
 
 name: Java CI with Maven
 
-on:
-  push:
-      branches:
-        - 'main'
+on: [ push ]
 #     branches:
 #       - 'main'
 #     paths:
