--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -13,7 +13,9 @@ on: [ push ]
 #       - 'main'
 #     paths:
 #       - 'demo/**'
-permissions: read-all|write-all
+permissions: 
+      read-all
+      write-all
 
 jobs:
   build:
