--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -13,9 +13,7 @@ on: [ push ]
 #       - 'main'
 #     paths:
 #       - 'demo/**'
-permissions: 
-      read-all
-      write-all
+permissions: write-all
 
 jobs:
   build:
