--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -8,11 +8,12 @@
 
 name: Java CI with Maven
 
-on: [ push ]
-#     branches:
-#       - 'main'
-#     paths:
-#       - 'demo/**'
+on:
+  push:
+    branches:
+      - 'main'
+    paths:
+      - 'demo/**'
 permissions: write-all
 
 jobs:
