--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -19,4 +19,4 @@ jobs:
     - name: Grant execute permission for gradlew
       run: chmod +x ad/gradlew
     - name: Build with Gradle
-      run: ./gradlew build
+      run: ad/./gradlew build
