--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -32,4 +32,4 @@ jobs:
       uses: gradle/gradle-build-action@v2
     
     - name: Execute Gradle build
-      run: ad/./gradlew build
+      run: ./ad/./gradlew build
