--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -28,6 +28,8 @@ jobs:
       with:
         java-version: '11'
         distribution: 'temurin'
+    - name: Grant execute permission for gradlew
+      run: chmod +x ad/gradlew
     - name: Setup Gradle
       uses: gradle/gradle-build-action@v2
     
