--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -32,6 +32,7 @@ jobs:
       run: chmod +x ad/gradlew
     - name: Setup Gradle
       uses: gradle/gradle-build-action@v2
-    
+    - name: pwd
+      run: pwd
     - name: Execute Gradle build
       run: ./ad/./gradlew build
