--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -34,5 +34,9 @@ jobs:
       uses: gradle/gradle-build-action@v2
     - name: pwd
       run: pwd
+    - name: cd
+      run: cd /ad
+    - name: pwd
+      run: pwd
     - name: Execute Gradle build
       run: ./ad/./gradlew build
