--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -35,8 +35,6 @@ jobs:
     - name: pwd
       run: pwd
     - name: cd
-      run: cd ./ad
-    - name: pwd
-      run: pwd
+      run: cd ./ad;pwd
     - name: Execute Gradle build
       run: ./gradlew build
