--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -8,12 +8,12 @@
 
 name: Java CI with Maven
 
-on:
-  push:
-    branches:
-      - 'main'
-    paths:
-      - 'demo/**'
+on: [push]
+#   push:
+#     branches:
+#       - 'main'
+#     paths:
+#       - 'demo/**'
 permissions: write-all
 
 jobs:
@@ -29,6 +29,13 @@ jobs:
         java-version: '8'
         distribution: 'temurin'
         cache: 'maven'
+    - name: Cache local Maven repository
+      uses: actions/cache@v3
+      with:
+        path: ~/.m2/repository
+        key: ${{ runner.os }}-maven-${{ hashFiles('demo/pom.xml') }}
+        restore-keys: |
+               ${{ runner.os }}-maven-
     - name: Build with Maven
       run: mvn -B install --file demo/pom.xml
     - name: Publish Test Report
