--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -10,12 +10,12 @@ name: Java CI with Maven
 
 
 
-on: [push]
-#   push:
-#     branches:
-#       - 'main'
-#     paths:
-#       - 'demo/**'
+on: 
+  push:
+    branches:
+      - 'main'
+    paths:
+      - 'demo/**'
 permissions: write-all
 
 jobs:
